[project]
name = "gaia-multiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.65.2",
    "crewai-tools>=0.12.1",
    "streamlit>=1.38.0",
    "duckduckgo-search>=6.2.13",
    "requests>=2.32.3",
    "litellm>=1.48.6",
    "upstash-vector>=0.6.0",
    "python-dotenv>=1.0.1",
]
